--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .app-container {
   background-color: #282c34;
   min-height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,10 +13,7 @@
 .unsupported-network {
   width: 340px;
   max-width: 100%;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
   margin: auto;
-  padding: 1rem;
 }
 
 .error {
@@ -34,7 +32,7 @@
 .mint-nft,
 .member-page {
   flex-direction: column;
-  width: 960px;
+  width: 100vw;
   max-width: calc(100% - 1rem);
   padding-left: 0.5rem;
   padding-right: 0.5rem;
